cabal-version:       >=1.10

name:                hw03
version:             0.1.0.0
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable hw03
  main-is:             AVL.hs
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , QuickCheck >= 2.14
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
                       -main-is AVL
                     
library
  exposed-modules:     AVL
  build-depends:       base >= 4.14
                     , QuickCheck >= 2.14
  default-language:    Haskell2010
