cabal-version:       >=1.10

name:                hw04
version:             0.1.0.0
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     RegExp
  hs-source-dirs:      lib
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
                     
executable hw03
  main-is:             Test.hs
  hs-source-dirs:      app
  build-depends:       base >=4.14 && <4.15
                     , HUnit >= 1.6
                     , QuickCheck                     
                     , hw04
  default-language:    Haskell2010
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
                       -main-is Test

